.provarCaches/00D5f000005vwGkEAI/objects/rstk__icixrs__c.object
<CustomObject>
    <description>icixrs__c</description>
    <fields>
        <fullName>rstk__icixrs_dmdqtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Quantity Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_fcstdmdnetopt_pl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Net Forecast Demand Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net all demands against forecast</fullName>
                </value>
                <value>
                    <fullName>Net only independent demands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icixrs_fcstenddte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_fcststrtdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Master</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Requirements Summaries</relationshipLabel>
        <relationshipName>icixrss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_ordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Requirements Summaries</relationshipLabel>
        <relationshipName>icixrss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_qtyoutstdg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Remaining</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_qtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icixrs_sts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Requirements Summary</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>